# AgenticWorkflow-main

./: .gitignore  AGENTS.md  AI-STUDIO-ARCHITECTURE-AND-PHILOSOPHY.md  AI-STUDIO-README.md  AI-STUDIO-USER-MANUAL.md  ANTHEM-ARCHITECTURE-AND-PHILOSOPHY.md  ANTHEM-README.md  ANTHEM-USER-MANUAL.md  AUTOBIOGRAPHY-ARCHITECTURE-AND-PHILOSOPHY.md  AUTOBIOGRAPHY-README.md  AUTOBIOGRAPHY-USER-MANUAL.md  CLAUDE.md  DECISION-LOG.md  GEMINI.md  LESSON-PACKAGE-ARCHITECTURE-AND-PHILOSOPHY.md  LESSON-PACKAGE-README.md  LESSON-PACKAGE-USER-MANUAL.md  MATERIAL-ARCHITECTURE-AND-PHILOSOPHY.md  MATERIAL-README.md  MATERIAL-USER-MANUAL.md  MODULE-EXTRACTION-PLAN.md  PRD.md  PROMO-VIDEO-ARCHITECTURE-AND-PHILOSOPHY.md  PROMO-VIDEO-README.md  PROMO-VIDEO-USER-MANUAL.md  README.md  test_infrastructure.mjs
.claude/: settings.json
.claude/agents/: app-translator.md  autobiography-reviewer.md  chapter-writer.md  church-app-orchestrator.md  code-generator.md  consistency-checker.md  content-builder.md  conversation-guide.md  deployment-manager.md  design-system-agent.md  infra-builder.md  interviewer.md  orchestrator.md  pipeline-builder.md  quality-checker.md  reviewer-deep.md  story-architect.md  tdd-guard.md  voice-calibrator.md
.claude/commands/: app-status.md  app-verify.md  build-verify.md  deploy-app.md  export.md  fallback.md  start.md  (+5 more)
anthem-generator/: .gitignore  PLAN.md  run.py  workflow.md
autobiography-generator/: DAY-BY-DAY-PLAN.md  pyproject.toml  requirements.lock.txt  state.yaml  v2-anecdote-ownership-map.md  v2-anti-homogenization-constraints.md  v3-chapter-plan.md  workflow.md
autobiography-generator/agents/: voice-profile.yaml
autobiography-generator/agents/prompts/: chapter-reviewer.md  chapter-writer.md  interviewer.md  voice-profiler.md
autobiography-generator/config/: emotion-keywords.yaml  hanja-dictionary.yaml
autobiography-generator/docs/: PRD-part-A.md  credential-management-guide.md  mcp-server-research.md  privacy-strategy.md  stt-integration-guide.md  writing-craft-to-code.md
autobiography-generator/eval/promptfoo/: promptfooconfig.yaml
autobiography-generator/quality/: continuity-deep-report-v2.md
autobiography-generator/schemas/: chapter_draft.schema.json  interview_transcript.schema.json  review_verdict.schema.json  state.schema.json  story_bible.schema.json  story_blueprint.schema.json
autobiography-generator/scripts/: __init__.py  assemble_chapter_context.py  assess_material.py  build_book.py  check.py  check_voice.py  compare.py  compute_voice_fingerprint.py  credential_manager.py  dashboard.py  dev.sh  fallback_controller.py  golden_test_data.json  init_project.py  integration-setup.sh  integration_adapters.py  integration_health_check.py  judge.py  preprocess_audio.sh  prompt_guard_hook.py  quality_gate_check.py  record_interview.sh  run_stt_pipeline.sh  schema_validator.py  schemas.py  setup.sh  sot_lib.py  style_blender.py  test-multi-model.sh  test_quality.py  transcribe_interview.py  troubleshoot-integrations.sh  validate_blueprint.py  validate_chapter.py  validate_consistency.py  validate_embellishment.py  validate_emotional_balance.py  validate_interview_coverage.py  validate_metaphor.py  validate_pacs_floor.py  (+6 more)
autobiography-generator/templates/: agent-documentation-standard.md  code-review-checklist.md  epub-metadata.yaml  epub.css  memoir-print.latex  memoir.latex  prompt-versioning-convention.md
autobiography-generator/templates/lua/: dropcaps.lua  epigraphs.lua  scene-breaks.lua
autobiography-generator/test-data/golden-outputs/: chapter-1-golden.md
autobiography-generator/test-data/micro-interviews/: INT-001-childhood.json  INT-002-university.json
autobiography-generator/tests/: __init__.py  conftest.py  test_agent_outputs.py  test_assemble_chapter_context.py  test_chapter_draft_schema.py  test_fallback.py  test_hooks.py  test_io_helpers.py  test_korean_validators.py  test_orchestration.py  test_state_file.py  test_story_bible_schema.py  test_translation.py
autobiography-generator/webapp/: package-lock.json  package.json
autobiography-generator/webapp/e2e/: chapters.spec.ts  dashboard.spec.ts  interviews.spec.ts  navigation.spec.ts  quality.spec.ts  story-bible.spec.ts
autobiography-generator/webapp/src/app/: layout.tsx  page.tsx
autobiography-generator/webapp/src/app/api/chapters/: route.ts
autobiography-generator/webapp/src/app/api/interviews/: route.ts
autobiography-generator/webapp/src/app/api/quality/: route.ts
autobiography-generator/webapp/src/app/api/state/: route.ts
autobiography-generator/webapp/src/app/chapters/: page.tsx
autobiography-generator/webapp/src/app/interviews/: page.tsx
autobiography-generator/webapp/src/app/quality/: page.tsx
autobiography-generator/webapp/src/app/story-bible/: page.tsx
autobiography-generator/webapp/src/lib/: data.ts
content-common/: README.md
docs/: architectural-decision-records.md  code-convention.md  code-quality-guide.md
lesson-package-generator/: .gitignore  PLAN.md  requirements.txt  state.yaml  workflow.md
material-generator/: PLAN.md  run.py  workflow.md
promo-video-generator/: PLAN.md  run.py  workflow.md
prompt/: distill-partner.md  prd.md  workflow-coding.md  workflow.md
translations/: church-app-glossary.yaml
(+209 files in other folders)
