[project]
name = "autobiography-generator"
version = "0.1.0"
description = "AI-powered autobiography generation pipeline — local Claude Code workflow"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "keyring>=25.0",
    "textstat>=0.7",
]

[project.optional-dependencies]
ai = [
    "openai>=1.50",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
]

# ──────────────────────────────────────────────
# RUFF — Linter + Formatter (replaces black, isort, flake8, pyflakes)
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "A",      # flake8-builtins (shadowing builtins)
    "C4",     # flake8-comprehensions (better list/dict/set comprehensions)
    "SIM",    # flake8-simplify (simplifiable code)
    "TCH",    # flake8-type-checking (move imports to TYPE_CHECKING)
    "RUF",    # ruff-specific rules
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return (unnecessary return statements)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib (prefer pathlib over os.path)
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint subset
    "PERF",   # perflint (performance anti-patterns)
    "FURB",   # refurb (modern Python improvements)
    "LOG",    # flake8-logging
    "D",      # pydocstyle (docstring conventions)
    "ANN",    # flake8-annotations (type annotation enforcement)
]

ignore = [
    "D100",   # missing docstring in public module (too noisy for scripts)
    "D104",   # missing docstring in public package
    "D203",   # no-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN101", # missing type annotation for self (deprecated)
    "ANN102", # missing type annotation for cls (deprecated)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # type annotations not required in tests
    "D",      # docstrings not required in tests
    "ARG",    # unused arguments common in fixtures
    "PLR2004", # magic numbers OK in test assertions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["autobiography_generator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ──────────────────────────────────────────────
# MYPY — Static Type Checking
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ──────────────────────────────────────────────
# PYTEST — Test Runner
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Fast, isolated unit tests (no I/O)",
    "integration: Tests that read/write files",
    "schema: Schema validation tests",
    "pipeline: Pipeline step sequencing tests",
    "slow: Tests that take > 5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "scripts/check.py",
    "scripts/check_voice.py",
    "scripts/compare.py",
    "scripts/judge.py",
    "scripts/schema_validator.py",
    "scripts/test_quality.py",
    "scripts/validate_chapter.py",
    "scripts/validate_story_bible.py",
    "scripts/validate_consistency.py",
    "scripts/credential_manager.py",
    "scripts/integration_adapters.py",
    "scripts/integration_health_check.py",
    "scripts/quality_gate_check.py",
    "scripts/validate_embellishment.py",
    "scripts/validate_metaphor.py",
    "scripts/validate_emotional_balance.py",
    "scripts/assess_material.py",
    "scripts/transcribe_interview.py",
    "scripts/build_book.py",
    "scripts/dashboard.py",
    "scripts/prompt_guard_hook.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
